--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -789,7 +789,7 @@
 				<key>MinKernel</key>
 				<string>22.4.0</string>
 				<key>Replace</key>
-				<data>uggAAAA=</data>
+				<data>uggAAAAA</data>
 				<key>ReplaceMask</key>
 				<data>//////8=</data>
 				<key>Skip</key>
